Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-572

Loading default session opens projects which have been closed in the session

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 1.2.90, Qt Creator 1.3.0, Qt Creator 1.3.1, Qt Creator 1.3.83 (2.0.0-beta)
    • None
    • Windows Vista 64
    • 272e76409de4a957570191fe01823316388dda12

    Description

      To reproduce:

      • load default session
      • open project P
      • load other session
      • load default session, project P is opened (as intended)
      • close project P
      • load other session
      • load default session, project P is opened (which is wrong)

      This seems to happen in default session only. Other sessions do it right.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes