Make default virgin session check more robust.

Task-Nr: QTCREATORBUG-572